--- a/.github/workflows/openwrt-gl.yml
+++ b/.github/workflows/openwrt-gl.yml
@@ -75,6 +75,7 @@ jobs:
     - name: Clone Source Code
       working-directory: /builder    
       run: |
+        if: ${{ steps.init.outputs.status }} == 'success' && !cancelled()
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /builder/openwrt ${GITHUB_WORKSPACE}/openwrt
