--- a/.github/workflows/openwrt-gl.yml
+++ b/.github/workflows/openwrt-gl.yml
@@ -40,6 +40,20 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
+    - name: sfreespace
+      uses: jlumbroso/free-disk-space@main
+      with:
+        # this might remove tools that are actually needed,
+        # if set to "true" but frees about 6 GB
+        tool-cache: true
+        # all of these default to true, but feel free to set to
+        # "false" if necessary for your workflow
+        android: true
+        dotnet: true
+        haskell: true
+        large-packages: true
+        swap-storage: true
+      
     - name: Initialization Environment
       env:
         DEBIAN_FRONTEND: noninteractive
